Fixed overlaping text and added ellipsis icon

--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
-  background: radial-gradient(circle at 20% 15%, rgba(223, 177, 131, 0.5), transparent 60%),
-  radial-gradient(circle at 80% 30%, rgba(138, 104, 69, 0.4), transparent 70%),
-  linear-gradient(to bottom, #d2b891, #b7986d, #d0ae85),url(images/stains.png);
+  background: radial-gradient(
+      circle at 20% 15%,
+      rgba(223, 177, 131, 0.5),
+      transparent 60%
+    ),
+    radial-gradient(circle at 80% 30%, rgba(138, 104, 69, 0.4), transparent 70%),
+    linear-gradient(to bottom, #d2b891, #b7986d, #d0ae85),
+    url(images/stains.png);
   background-position: center;
   background-blend-mode: multiply;
   background-size: 700px;
@@ -33,7 +38,6 @@ body {
   max-width: 100%;
   box-sizing: border-box;
   position: relative;
-  padding-right: 80px;
   box-shadow: 2px 2px 8px transparent;
   transform: scale(0);
   opacity: 0.32;
@@ -41,36 +45,57 @@ body {
   transition: box-shadow 250ms ease-in-out, scale 250ms ease-in-out;
   animation: quote-reveal linear forwards;
   animation-timeline: view(block);
-  animation-range: entry-crossing calc(0% - 10svh) entry-crossing calc(100% + 10svh);
-  }
-  
+  animation-range: entry-crossing calc(0% - 10svh) entry-crossing
+    calc(100% + 10svh);
+}
+
+.card-top {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.toggle-icon {
+  cursor: pointer;
+}
+
+.card-bottom {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .quote-block:hover {
   box-shadow: 3px 3px #44423f;
   background-color: rgb(237, 229, 225);
+}
+
+body.dark .quote-block:hover {
+  box-shadow: 3px 3px #989796;
+}
+
+@keyframes quote-reveal {
+  0% {
+    /* clip-path: polygon(50% 100%, 50% 100%, 50% 100%, 50% 100%); */
+    transform: scale(0) translateX(-50%) translateY(-100%);
+    opacity: 0;
   }
 
-  body.dark .quote-block:hover {
-    box-shadow: 3px 3px #989796;
-   }
-
-  @keyframes quote-reveal {
-    0% {
-      /* clip-path: polygon(50% 100%, 50% 100%, 50% 100%, 50% 100%); */
-      transform: scale(0) translateX(-50%) translateY(-100%);
-      opacity: 0;
-    }
-  
-    25% {
-      transform: scale(0.25) translateX(-50%) translateY(-100%);
-      opacity: 0;
-    }
-  
-    100% {
-      transform: scale(1) translateX(0) translateY(0%);
-      /* clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); */
-      opacity: 1;
-    }
+  25% {
+    transform: scale(0.25) translateX(-50%) translateY(-100%);
+    opacity: 0;
   }
+
+  100% {
+    transform: scale(1) translateX(0) translateY(0%);
+    /* clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); */
+    opacity: 1;
+  }
+}
 
 .quote-text {
   font-size: 1.2em;
@@ -108,11 +133,22 @@ body {
 }
 
 .icons-container {
+  display: none;
+}
+.icons-wrapper {
   position: absolute;
-  right: 10px;
-  bottom: 10px;
+  top: -18px;
+  right: -15px;
   display: flex;
-  gap: 10px;
+  padding: 10px;
+  background-color: rgb(237, 229, 225);
+  box-shadow: 10px 10px 81px 0px rgba(152,151,150,0.75);
+-webkit-box-shadow: 10px 10px 81px 0px rgba(152,151,150,0.75);
+-moz-box-shadow: 10px 10px 81px 0px rgba(152,151,150,0.75);
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 15px;
+
 }
 .icon {
   cursor: pointer;
@@ -123,7 +159,6 @@ body {
   color: gray;
 }
 
-
 body.dark .icon {
   color: #eee8e1;
 }
@@ -133,15 +168,14 @@ body.dark .icon:hover {
 }
 
 body.dark {
-  background: 
-    linear-gradient(to bottom, #000000, #1a1a4b, #4b0082, #000d33),
-    url('images/stars.png');
+  background: linear-gradient(to bottom, #000000, #1a1a4b, #4b0082, #000d33),
+    url("images/stars.png");
   background-position: center;
   background-blend-mode: overlay;
 }
 
-body h2{
-  color: rgb(220, 215, 215)
+body h2 {
+  color: rgb(220, 215, 215);
 }
 
 body.dark .quote-block {
@@ -157,30 +191,30 @@ body.dark .quote-source {
   color: #ebdfd1;
 }
 
-body.dark h2{
-    color: #ddd;
+body.dark h2 {
+  color: #ddd;
 }
 
 #back-to-top {
   display: none;
-	position: fixed;
-	bottom: 20px;
-	right: 30px;
-	z-index: 99;
-	border: none;
-	outline: none;
-	background-color: #fff;
-	box-shadow: #333 0px 0px 10px;
-	color: white;
-	cursor: pointer;
-	padding: 0.4rem;
-	border-radius: 4px;
-	font-size: 1.2rem;
-	transition: background-color 0.3s, transform 0.3s;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  box-shadow: #333 0px 0px 10px;
+  color: white;
+  cursor: pointer;
+  padding: 0.4rem;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  transition: background-color 0.3s, transform 0.3s;
 }
 #back-to-top:hover {
-	background-color: #f1f1f1;
-	transform: translateY(-5px);
+  background-color: #f1f1f1;
+  transform: translateY(-5px);
 }
 
 .liked {
@@ -190,7 +224,6 @@ body.dark h2{
 body.dark .liked {
   color: red;
 }
-
 
 .bubble {
   position: absolute;
@@ -211,7 +244,7 @@ body.dark .liked {
 }
 
 footer {
-  background-color: #f8f8f79e ;
+  background-color: #f8f8f79e;
   padding: 20px 0;
   margin-top: 30px;
   text-size-adjust: bold;
@@ -228,7 +261,7 @@ footer {
 
 .footer-container h3 {
   margin-bottom: 10px;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   text-size-adjust: bold;
 }
 
@@ -243,7 +276,7 @@ footer {
 
 .footer-link:hover {
   color: #000000;
-  text-decoration:none;
+  text-decoration: none;
   transition: 0.1s ease;
   font-size: 18px;
 }
